# soma

./: .gitignore  PROJECT_SUMMARY.md  README.md  notes.txt  requirements-core.txt  requirements.txt
agents/: __init__.py  base_agent.py  bizdev_agent.py  (+11 more)
soma_docs/orquestra/: .gitignore  README.md  setup.cfg
soma_docs/orquestra/.github/workflows/: format.yml
soma_docs/orquestra/notebook/: Example_aromatic_filter_sa_qed.ipynb  analyse_diversity_from_prior.py  aromatic_substructures.txt  convergence_128bits_qbag.py  convergence_128bits_rbm.py  convergence_16bits_qbag.py  convergence_16bits_qcbm.py  convergence_16bits_rbm.py  diversity_from_prior_as_training_progresses.ipynb  example.ipynb  fingerprint_smiles_batch.py  lstm_training.ipynb  nLSTM_multi_prior_size.ipynb  nLSTM_multi_prior_size.py  nLSTM_qabm.py  nLSTM_random.py  nLSTM_rbm.py  optuna_128bits_qbag.py  optuna_128bits_rbm.py  optuna_16bits_qbag.py  optuna_16bits_qcbm.py  optuna_16bits_rbm.py  optuna_4bits_qbag.py  optuna_4bits_qcbm.py  optuna_4bits_rbm.py  optuna_8bits_qbag.py  plots_tartarus_benchmarks_16_kaiming.ipynb  plots_tartarus_benchmarks_224_rbm_mult.ipynb  plots_tartarus_benchmarks_224_vanilla_lstm.ipynb  qbag_lstm.py  qbag_lstm_metrics.py  rbm_lstm.py  read_optuna_experiments.ipynb  tartarus_docking.py  tartarus_hillclimbing.py  tartarus_loop.py  tartarus_loop_qbag.py  tartarus_loop_qcbm.py  tartarus_loop_random.py  tartarus_loop_rbm.py  (+3 more)
soma_docs/orquestra/notebook/data/: KRAS_G12D_inhibitors.csv  data.csv
soma_docs/orquestra/src/orquestra/drug/: metrics.py  sdk.py  tartarus_filter.py  utils.py
(+102 files in other folders)
