[metadata]
name = orquestra-qml-drug
description = "Orquestra Python Drug discovery package"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/zapatacomputing/orquestra-qml-drug
author = Zapata Computing Inc.
author_email = info@zapatacomputing.com,
license = <INSERT LICENSE APPROPRIATE LICENSE HERE>
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering


[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find_namespace:
python_requires >=3.11

install_requires =
    # Core Scientific Libraries
    numpy~=1.26.0
    scipy>=1.4.1
    sympy>=1.5,<=1.9
    
    # Quantum and D-Wave Tools
    dwave-cloud-client
    dwave-networkx
    dwave-system
    qiskit>=0.39.0
    
    # ML/Optimization
    codecarbon
    einops 
    optuna
    selfies
    wandb
    mlflow
    
    # Serialization & Parallelism
    cloudpickle
    pathos
    
    # Data Science Tools
    more_itertools
    rdkit
    tqdm
    
    # Development/CLI Tools
    rich
    trogon



[options.packages.find]
where = src

[options.extras_require]
qc =
    orquestra.vqa
    tensorcircuit
dev =
    orquestra-python-dev


# wget http://ghazivakili.com/syba/syba.csv.gz
# wget http://ghazivakili.com/syba/syba4.csv.gz